feat(authors): add image upload
